--- a/L072NS_HSZF_2024251.Test/L072NS_HSZF_2024251.Test.csproj
+++ b/L072NS_HSZF_2024251.Test/L072NS_HSZF_2024251.Test.csproj
@@ -12,13 +12,38 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="NUnit" Version="3.14.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\L072NS_HSZF_2024251.Application\L072NS_HSZF_2024251.Application.csproj" />
+    <ProjectReference Include="..\L072NS_HSZF_2024251.Model\L072NS_HSZF_2024251.Model.csproj" />
+    <ProjectReference Include="..\L072NS_HSZF_2024251.Persistence.MsSql\L072NS_HSZF_2024251.Persistence.MsSql.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="NUnit.Framework" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="TestFiles\badFormat.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestFiles\badRoot.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestFiles\correctFormatWithDuplicates.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestFiles\correctFormatWithoutDuplicates.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestFiles\noBusRegions.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
